...
                app:tabTextColor="@color/white"></com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabs"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


...
